tests/ui/integral-indexing.stderr
error[E0277]: the type `[isize]` cannot be indexed by `u8`
  --> $DIR/integral-indexing.rs:6:7
   |
LL |     v[3u8];
   |       ^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[isize]>` is not implemented for `u8`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `Vec<isize>` to implement `Index<u8>`

error[E0277]: the type `[isize]` cannot be indexed by `i8`
  --> $DIR/integral-indexing.rs:7:7
   |
LL |     v[3i8];
   |       ^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[isize]>` is not implemented for `i8`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `Vec<isize>` to implement `Index<i8>`

error[E0277]: the type `[isize]` cannot be indexed by `u32`
  --> $DIR/integral-indexing.rs:8:7
   |
LL |     v[3u32];
   |       ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[isize]>` is not implemented for `u32`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `Vec<isize>` to implement `Index<u32>`

error[E0277]: the type `[isize]` cannot be indexed by `i32`
  --> $DIR/integral-indexing.rs:9:7
   |
LL |     v[3i32];
   |       ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[isize]>` is not implemented for `i32`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `Vec<isize>` to implement `Index<i32>`

error[E0277]: the type `[u8]` cannot be indexed by `u8`
  --> $DIR/integral-indexing.rs:12:18
   |
LL |     s.as_bytes()[3u8];
   |                  ^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[u8]>` is not implemented for `u8`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `[u8]` to implement `Index<u8>`

error[E0277]: the type `[u8]` cannot be indexed by `i8`
  --> $DIR/integral-indexing.rs:13:18
   |
LL |     s.as_bytes()[3i8];
   |                  ^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[u8]>` is not implemented for `i8`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `[u8]` to implement `Index<i8>`

error[E0277]: the type `[u8]` cannot be indexed by `u32`
  --> $DIR/integral-indexing.rs:14:18
   |
LL |     s.as_bytes()[3u32];
   |                  ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[u8]>` is not implemented for `u32`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `[u8]` to implement `Index<u32>`

error[E0277]: the type `[u8]` cannot be indexed by `i32`
  --> $DIR/integral-indexing.rs:15:18
   |
LL |     s.as_bytes()[3i32];
   |                  ^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[u8]>` is not implemented for `i32`
   = help: the following other types implement trait `SliceIndex<T>`:
             `usize` implements `SliceIndex<ByteStr>`
             `usize` implements `SliceIndex<[T]>`
   = note: required for `[u8]` to implement `Index<i32>`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0277`.
